<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".historyBook">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="199dp"
        android:layout_height="264dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginBottom="12dp"
        android:text="Choose Image"
        app:layout_constraintBottom_toTopOf="@+id/productType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.982" />

    <ProgressBar
        android:id="@+id/UploadprogressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="258dp"
        android:layout_height="26dp"
        android:layout_marginTop="22dp"
        android:progressTint="#03A9F4"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/productType"
        app:layout_constraintEnd_toStartOf="@+id/chooseImageButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/productType"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/ProductType"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />


    <EditText
        android:id="@+id/ProductName"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ProductName"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productType" />

    <EditText
        android:id="@+id/author_name"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Author: "
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ProductName" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ProductPrice"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author_name" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ProductQuantity"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productPrice" />

    <EditText
        android:id="@+id/description"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="221dp"
        android:layout_height="52dp"
        android:layout_marginBottom="44dp"
        android:background="#B9251515"
        android:text="Upload"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>